test/tests/stages/18_structures/invalid_struct_tags/deref_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  *
  identifier(ptr)
  =
  const int(0)
  ;
  *
  identifier(ptr)
  ;
  return
  const int(0)
  ;
  }
